<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pokemon</string>
    <string name="action_settings">Ajustes</string>


    <string name="login">Iniciar Sesión</string>
    <string name="register">Registrarse</string>
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar Contraseña</string>
    <string name="username">Nombre de Usuario</string>
    <string name="no_account_register">¿No tienes cuenta? Regístrate aquí</string>
    <string name="already_account_login">¿Ya tienes cuenta? Inicia sesión aquí</string>
    <string name="error_field_required">Este campo es obligatorio</string>
    <string name="error_invalid_email">Correo electrónico inválido</string>
    <string name="error_short_password">La contraseña debe tener al menos 6 caracteres</string>
    <string name="error_passwords_not_match">Las contraseñas no coinciden</string>
    <string name="registration_successful">Registro exitoso</string>
    <string name="pokemon_logo">Logo de Pokémon</string>


    <string name="next">Siguiente</string>
    <string name="previous">Anterior</string>
    <string name="first_fragment_label">Primera Pantalla</string>
    <string name="second_fragment_label">Segunda Pantalla</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus dui nec risus.</string>
</resources>